Plugin Name: Membership 2
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.0.3
----------------------------------------------------------------------
- Fix wrong redirect during setup wizard that ended in "Not allowed to view page" errors
- Fix some typos in admin pages

1.0.0.2
----------------------------------------------------------------------
- Fix compatibility issues with PHP 5.2.4 - note that you still need PHP 5.3 to use the Stripe Gateways

1.0.0.1
----------------------------------------------------------------------
- Fix some PHP notices and warnings that did happen during first setup

Membership2 1.0.0.0
----------------------------------------------------------------------
- Plugin name changed from Protected Content to Membership2
- New network-wide protection mode added (see Membership2 > Help page)
- New official plugin API added (see Membership2 > Help page)
- New Payment gateway added: Stripe Subscriptions
- New option in Membership Payment settings to disable individual payment gateways.
- Improved payment settings page to use number-input fields instead of text-fields
- Fix issue where Simulation (Test) mode added HTML code to all Ajax responses
- Fix blank screen after submitting the password reset form
- Minor improvements all over the place

1.1.1.6
----------------------------------------------------------------------
- Add wp-config option MS_NO_SHORTCODE_PREVIEW (details on the Help > Advanced Settings page)
- Improve shortcode logic to not show duplicate login forms in rare, theme-specific cases
- Fix bug that caused missing expiration date for admin-assigned memberships
- Fix a rare error 'float expected but string found' in billings module
- Fix minor issue with wrong filter parameter 

1.1.1.5
----------------------------------------------------------------------
- Add "autofocus" attribute to login shortcode